--- a/zmath.vcxproj
+++ b/zmath.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="matrix44.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="quaternion.h" />
+    <ClInclude Include="vector2.h" />
     <ClInclude Include="vector3.h" />
     <ClInclude Include="zmath.h" />
   </ItemGroup>
@@ -102,6 +103,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="quaternion.cpp" />
+    <ClCompile Include="vector2.cpp" />
     <ClCompile Include="vector3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
