--- a/zmath.vcxproj.filters
+++ b/zmath.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="src\matrix44.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\vector4.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
@@ -45,6 +48,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\matrix44.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\vector4.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
