--- a/zmath.vcxproj
+++ b/zmath.vcxproj
@@ -19,9 +19,11 @@
     <ClCompile Include="src\quaternion.cpp" />
     <ClCompile Include="src\vector2.cpp" />
     <ClCompile Include="src\vector3.cpp" />
+    <ClCompile Include="src\vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\framework.h" />
+    <ClInclude Include="include\vector4.h" />
     <ClInclude Include="include\matrix44.h" />
     <ClInclude Include="include\pch.h" />
     <ClInclude Include="include\quaternion.h" />
