Triangle support wip

--- a/zmath.vcxproj.filters
+++ b/zmath.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="src\vector4.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\triangle.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
@@ -51,6 +54,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\vector4.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\triangle.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
