--- a/zmath.vcxproj
+++ b/zmath.vcxproj
@@ -17,12 +17,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\quaternion.cpp" />
+    <ClCompile Include="src\triangle.cpp" />
     <ClCompile Include="src\vector2.cpp" />
     <ClCompile Include="src\vector3.cpp" />
     <ClCompile Include="src\vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\framework.h" />
+    <ClInclude Include="include\triangle.h" />
     <ClInclude Include="include\vector4.h" />
     <ClInclude Include="include\matrix44.h" />
     <ClInclude Include="include\pch.h" />
