--- a/zmath.vcxproj
+++ b/zmath.vcxproj
@@ -16,6 +16,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\plane.cpp" />
     <ClCompile Include="src\quaternion.cpp" />
     <ClCompile Include="src\triangle.cpp" />
     <ClCompile Include="src\vector2.cpp" />
@@ -24,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\framework.h" />
+    <ClInclude Include="include\plane.h" />
     <ClInclude Include="include\triangle.h" />
     <ClInclude Include="include\vector4.h" />
     <ClInclude Include="include\matrix44.h" />
