--- a/zmath.vcxproj.filters
+++ b/zmath.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="src\triangle.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\plane.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
@@ -57,6 +60,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\triangle.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\plane.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
